--- a/jupyter_notebooks/ModelV5.ipynb
+++ b/jupyter_notebooks/ModelV5.ipynb
@@ -57,9 +57,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job: WithoutINRL1, Model: WDSSV5, Device: cuda\n",
-      "Model path: out\\WithoutINRL1-WDSSV5\\model\n",
-      "Log path: out\\WithoutINRL1-WDSSV5\\logs\n"
+      "8\n",
+      "Job: pp_relu_inr_only, Model: WDSSV5, Device: cuda\n",
+      "Model path: out\\pp_relu_inr_only-WDSSV5\\model\n",
+      "Log path: out\\pp_relu_inr_only-WDSSV5\\logs\n"
      ]
     }
    ],
@@ -72,7 +73,17 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "8\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "from network.dataset import *\n",
     "\n",
@@ -85,52 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from network.modules import *\n",
-    "\n",
-    "class WDSSModelV5(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(WDSSModelV5, self).__init__()\n",
-    "\n",
-    "        self.lr_frame_feature_extractor = LRFrameFeatureExtractor(12, 64, [32, 48, 48])\n",
-    "        self.hr_gbuffer_feature_extractor = HRGBufferFeatureExtractor(44, 5, 64)\n",
-    "        self.feature_fusion = FeatureFusion(64, 12, [64, 48])\n",
-    "        self.inr = FourierMappedINR(lr_feat_c=32, gb_feat_c=32, out_channels=12, mlp_inp_channels=64, hidden_channels=[64, 64, 64])\n",
-    "\n",
-    "        self.final_conv = nn.Conv2d(12, 12, 3, 1, 1)\n",
-    "\n",
-    "    def forward(self, lr_frame: torch.Tensor, hr_gbuffer: torch.Tensor, temporal: torch.Tensor) -> Tuple[torch.Tensor, torch.Tensor]:\n",
-    "        # Pixel unshuffling\n",
-    "        lr_frame_pixel_unshuffled = F.pixel_unshuffle(lr_frame, 2)\n",
-    "        hr_gbuffers_pixel_unshuffled = F.pixel_unshuffle(hr_gbuffer, 2)\n",
-    "\n",
-    "        # Extract features\n",
-    "        lr_frame_feature = self.lr_frame_feature_extractor(lr_frame_pixel_unshuffled)\n",
-    "        hr_gbuffer_feature = self.hr_gbuffer_feature_extractor(hr_gbuffers_pixel_unshuffled)\n",
-    "\n",
-    "        # Split the lr_frame_feature and hr_gbuffer_feature into 2-2 parts\n",
-    "        lr_frame_ff, lr_frame_inr = torch.split(lr_frame_feature, 32, dim=1)\n",
-    "        hr_gbuffer_ff, hr_gbuffer_inr = torch.split(hr_gbuffer_feature, 32, dim=1)\n",
-    "\n",
-    "        # Upsample the lr_frame_ff\n",
-    "        lr_frame_ff = ImageUtils.upsample(lr_frame_ff, 2)\n",
-    "\n",
-    "        # Feature Fusion, input is concatenated lr_frame_ff and hr_gbuffer_ff\n",
-    "        feature_fusion = self.feature_fusion(torch.cat([lr_frame_ff, hr_gbuffer_ff], dim=1))\n",
-    "\n",
-    "        # INR\n",
-    "        inr = self.inr(lr_frame_inr, hr_gbuffer_inr)\n",
-    "\n",
-    "        # Element-wise addition\n",
-    "        out = feature_fusion + inr\n",
-    "        # out = inr\n",
-    "\n",
-    "        # Final Convolution\n",
-    "        out = self.final_conv(out)\n",
-    "\n",
-    "        return out, WaveletProcessor.batch_iwt(out)\n",
+    "from network.models.WDSS import get_wdss_model\n",
     "    \n",
     "# Model\n",
-    "model = WDSSModelV5().to(device)"
+    "model = get_wdss_model(settings.model_config).to(device)"
    ]
   },
   {
@@ -174,14 +143,19 @@
    "source": [
     "from network.losses import CriterionSSIM_L1\n",
     "\n",
-    "criterion = CriterionSSIM_L1().to(device=device)\n",
+    "criterion = CriterionSSIM_L1({\n",
+    "    'ssim_image': 0.01,\n",
+    "    'ssim_wavelets': 0.19,\n",
+    "    'l1_image': 0.1,\n",
+    "    'l1_wavelets': 0.9\n",
+    "}).to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "scheduler = StepLR(optimizer, step_size=5, gamma=0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,11 +166,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.train(num_epochs=100)"
+    "# trainer.load_checkpoint('40.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 1 : 1/1:  20%|██        | 12/60 [05:22<20:56, 26.19s/batch, Loss: 0.3252]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Dev\\MinorProject\\WDSS\\network\\trainer.py:187\u001b[0m, in \u001b[0;36mTrainer.train\u001b[1;34m(self, num_epochs)\u001b[0m\n\u001b[0;32m    184\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, batch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(train_loader):\n\u001b[0;32m    185\u001b[0m     \u001b[38;5;66;03m# Wait for the previous batch to finish training and get the loss\u001b[39;00m\n\u001b[0;32m    186\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m train_thread\u001b[38;5;241m.\u001b[39mis_alive():\n\u001b[1;32m--> 187\u001b[0m         \u001b[43mtrain_thread\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    189\u001b[0m     \u001b[38;5;66;03m# Update the losses and the progress bar\u001b[39;00m\n\u001b[0;32m    190\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_batch_loss \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    191\u001b[0m         \u001b[38;5;66;03m# Updade the final loss\u001b[39;00m\n",
+      "File \u001b[1;32mC:\\Python312\\Lib\\threading.py:1147\u001b[0m, in \u001b[0;36mThread.join\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m   1144\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcannot join current thread\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1146\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1147\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_wait_for_tstate_lock\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1148\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1149\u001b[0m     \u001b[38;5;66;03m# the behavior of a negative timeout isn't documented, but\u001b[39;00m\n\u001b[0;32m   1150\u001b[0m     \u001b[38;5;66;03m# historically .join(timeout=x) for x<0 has acted as if timeout=0\u001b[39;00m\n\u001b[0;32m   1151\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wait_for_tstate_lock(timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mmax\u001b[39m(timeout, \u001b[38;5;241m0\u001b[39m))\n",
+      "File \u001b[1;32mC:\\Python312\\Lib\\threading.py:1167\u001b[0m, in \u001b[0;36mThread._wait_for_tstate_lock\u001b[1;34m(self, block, timeout)\u001b[0m\n\u001b[0;32m   1164\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m   1166\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 1167\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mlock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43mblock\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m   1168\u001b[0m         lock\u001b[38;5;241m.\u001b[39mrelease()\n\u001b[0;32m   1169\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_stop()\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "trainer.train(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clear cuda cache\n",
+    "torch.cuda.empty_cache()"
    ]
   }
  ],
