--- a/jupyter_notebooks/dataset_compressed_v2.ipynb
+++ b/jupyter_notebooks/dataset_compressed_v2.ipynb
@@ -139,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "wdss",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
