separate file for patches code

--- a/jupyter_notebooks/make_video.ipynb
+++ b/jupyter_notebooks/make_video.ipynb
@@ -198,9 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 120/120 [03:31<00:00,  1.76s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -227,6 +235,12 @@
     "    hr_cv = hr_cv[..., [2, 1, 0]]  # Swap red and blue channels\n",
     "    cv2.imwrite(f\"{video_out_dir}/hr/frame_{frame_no:04d}.jpg\", hr_cv)\n",
     "\n",
+    "    # LR frame\n",
+    "    lr_cv = ImageUtils.tensor_to_opencv_image(lr.detach().cpu().clamp(0, 1))\n",
+    "    lr_cv = (lr_cv * 255).astype(np.uint8)\n",
+    "    lr_cv = lr_cv[..., [2, 1, 0]]  # Swap red and blue channels\n",
+    "    cv2.imwrite(f\"{video_out_dir}/lr/frame_{frame_no:04d}.jpg\", lr_cv)\n",
+    "\n",
     "    # cv2.imwrite(\"out/video/1.png\", res_cv)\n",
     "\n",
     "    # ImageUtils.display_images([res_cv, hr_cv])\n",
@@ -235,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,8 +257,8 @@
     "import cv2\n",
     "import os\n",
     "\n",
-    "image_folder = f\"{video_out_dir}/hr\"\n",
-    "video_name = f\"{video_out_dir}/hr_video.mp4\"\n",
+    "image_folder = f\"{video_out_dir}/res\"\n",
+    "video_name = f\"{video_out_dir}/res_video.mp4\"\n",
     "\n",
     "images = [img for img in os.listdir(image_folder) if img.endswith(\".jpg\")]\n",
     "frame = cv2.imread(os.path.join(image_folder, images[0]))\n",
@@ -259,6 +273,146 @@
     "\n",
     "cv2.destroyAllWindows()\n",
     "video.release()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute average losses\n",
+    "from network.losses import ImageEvaluator\n",
+    "\n",
+    "total_ssim = 0.0\n",
+    "total_mse = 0.0\n",
+    "total_l1 = 0.0\n",
+    "total_psnr = 0.0\n",
+    "total_lpips = 0.0\n",
+    "total_wavelet_ssim = 0.0\n",
+    "total_wavelet_mse = 0.0\n",
+    "total_wavelet_l1 = 0.0\n",
+    "total_wavelet_psnr = 0.0\n",
+    "total_wavelet_lpips = 0.0\n",
+    "\n",
+    "total_ssim_bilinear = 0.0\n",
+    "total_mse_bilinear = 0.0\n",
+    "total_l1_bilinear = 0.0\n",
+    "total_psnr_bilinear = 0.0\n",
+    "total_lpips_bilinear = 0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/238 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 238/238 [14:30<00:00,  3.66s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.wavelet import WaveletProcessor\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "for i in tqdm(range(len(test_dataset))):\n",
+    "    raw_frames = test_dataset[i]\n",
+    "    lr = raw_frames['LR'].to(device).unsqueeze(0)\n",
+    "    gb = raw_frames['GB'].to(device).unsqueeze(0)\n",
+    "    temp = raw_frames['TEMPORAL'].to(device).unsqueeze(0)\n",
+    "    hr = raw_frames['HR'].to(device).unsqueeze(0)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        wavelet, image = trainer.model.forward(lr, gb, temp, 2.0)\n",
+    "\n",
+    "    # Bilinearly upsample the LR image\n",
+    "    ups = ImageUtils.upsample(lr, 2)\n",
+    "    # Wavelet transform the hr image\n",
+    "    hr_wavelet = WaveletProcessor.batch_wt(hr)\n",
+    "\n",
+    "    # Compute the metrics\n",
+    "    total_mse += ImageEvaluator.mse(image, hr).item()\n",
+    "    total_ssim += ImageEvaluator.ssim(image, hr).item()\n",
+    "    total_l1 += ImageEvaluator.l1(image, hr).item()\n",
+    "    total_psnr += ImageEvaluator.psnr(image, hr, 1.0).item()\n",
+    "    total_lpips += ImageEvaluator.lpips(image, hr).item()\n",
+    "\n",
+    "    total_wavelet_mse += ImageEvaluator.mse(wavelet, hr_wavelet).item()\n",
+    "    total_wavelet_ssim += ((ImageEvaluator.ssim(wavelet[:, 0:3, :, :], hr_wavelet[:, 0:3, :, :]) + ImageEvaluator.ssim(wavelet[:, 3:6, :, :], hr_wavelet[:, 3:6, :, :]) + ImageEvaluator.ssim(wavelet[:, 6:9, :, :], hr_wavelet[:, 6:9, :, :]) + ImageEvaluator.ssim(wavelet[:, 9:12, :, :], hr_wavelet[:, 9:12, :, :])) / 4).item()\n",
+    "    total_wavelet_l1 += ImageEvaluator.l1(wavelet, hr_wavelet).item()\n",
+    "    total_wavelet_psnr += ImageEvaluator.psnr(wavelet, hr_wavelet, 2.0).item()\n",
+    "    total_wavelet_lpips += ((ImageEvaluator.lpips(wavelet[:, 0:3, :, :], hr_wavelet[:, 0:3, :, :]) + ImageEvaluator.lpips(wavelet[:, 3:6, :, :], hr_wavelet[:, 3:6, :, :]) + ImageEvaluator.lpips(wavelet[:, 6:9, :, :], hr_wavelet[:, 6:9, :, :]) + ImageEvaluator.lpips(wavelet[:, 9:12, :, :], hr_wavelet[:, 9:12, :, :])) / 4).item()\n",
+    "\n",
+    "    total_mse_bilinear += ImageEvaluator.mse(ups, hr).item()\n",
+    "    total_ssim_bilinear += ImageEvaluator.ssim(ups, hr).item()\n",
+    "    total_l1_bilinear += ImageEvaluator.l1(ups, hr).item()\n",
+    "    total_psnr_bilinear += ImageEvaluator.psnr(ups, hr, 1.0).item()\n",
+    "    total_lpips_bilinear += ImageEvaluator.lpips(ups, hr).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metrics for the model\n",
+      "SSIM: 0.9375269112466764\n",
+      "MSE: 0.0005352461289055841\n",
+      "L1: 0.013167775729123284\n",
+      "PSNR: 33.24649676956049\n",
+      "LPIPS: 0.19275168110342586\n",
+      "Metrics for the wavelet model\n",
+      "SSIM: 0.9348329733900663\n",
+      "MSE: 0.0006377929279276467\n",
+      "L1: 0.00947199624517009\n",
+      "PSNR: 39.104559096969474\n",
+      "LPIPS: 0.13105929968487315\n",
+      "Metrics for the bilinear model\n",
+      "SSIM: 0.9360964976939834\n",
+      "MSE: 0.00046700571506296895\n",
+      "L1: 0.010743548293371036\n",
+      "PSNR: 34.860456667026554\n",
+      "LPIPS: 0.18343993548710807\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print all\n",
+    "print(\"Metrics for the model\")\n",
+    "print(f\"SSIM: {total_ssim / len(test_dataset)}\")\n",
+    "print(f\"MSE: {total_mse / len(test_dataset)}\")\n",
+    "print(f\"L1: {total_l1 / len(test_dataset)}\")\n",
+    "print(f\"PSNR: {total_psnr / len(test_dataset)}\")\n",
+    "print(f\"LPIPS: {total_lpips / len(test_dataset)}\")\n",
+    "\n",
+    "print(\"Metrics for the wavelet model\")\n",
+    "print(f\"SSIM: {total_wavelet_ssim / len(test_dataset)}\")\n",
+    "print(f\"MSE: {total_wavelet_mse / len(test_dataset)}\")\n",
+    "print(f\"L1: {total_wavelet_l1 / len(test_dataset)}\")\n",
+    "print(f\"PSNR: {total_wavelet_psnr / len(test_dataset)}\")\n",
+    "print(f\"LPIPS: {total_wavelet_lpips / len(test_dataset)}\")\n",
+    "\n",
+    "print(\"Metrics for the bilinear model\")\n",
+    "print(f\"SSIM: {total_ssim_bilinear / len(test_dataset)}\")\n",
+    "print(f\"MSE: {total_mse_bilinear / len(test_dataset)}\")\n",
+    "print(f\"L1: {total_l1_bilinear / len(test_dataset)}\")\n",
+    "print(f\"PSNR: {total_psnr_bilinear / len(test_dataset)}\")\n",
+    "print(f\"LPIPS: {total_lpips_bilinear / len(test_dataset)}\")\n"
    ]
   }
  ],
