--- a/jupyter_notebooks/ModelV5.ipynb
+++ b/jupyter_notebooks/ModelV5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "from network.losses import CriterionSSIM_L1, CriterionSSIM_MSE\n",
+    "from network.losses import CriterionSSIM_L1\n",
     "\n",
     "criterion = CriterionSSIM_L1({\n",
     "    'ssim_image': 0.1,\n",
@@ -238,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "wdss",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
