--- a/jupyter_notebooks/make_video.ipynb
+++ b/jupyter_notebooks/make_video.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Dev\\MinorProject\\WDSS\\jupyter_notebooks\n",
+      "c:\\Dev\\MinorProject\\WDSS\n",
       "c:\\Dev\\MinorProject\\WDSS\n"
      ]
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -79,18 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test dataset size:  360\n"
+     ]
+    }
+   ],
    "source": [
     "from network.dataset import *\n",
     "\n",
-    "train_dataset, val_dataset, test_dataset = WDSSDatasetCompressed.get_datasets(settings)"
+    "train_dataset, val_dataset, test_dataset = WDSSDatasetCompressed.get_datasets(settings)\n",
+    "print(\"Test dataset size: \", len(test_dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,42 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting up [LPIPS] perceptual loss: trunk [vgg], v[0.1], spatial [off]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading model from: c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\lpips\\weights\\v0.1\\vgg.pth\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\lpips\\lpips.py:107: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  self.load_state_dict(torch.load(model_path, map_location='cpu'), strict=False)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from network.losses import CriterionSSIM_L1, CriterionSSIM_MSE\n",
     "\n",
@@ -148,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,11 +265,6 @@
     "total_l1 = 0.0\n",
     "total_psnr = 0.0\n",
     "total_lpips = 0.0\n",
-    "total_wavelet_ssim = 0.0\n",
-    "total_wavelet_mse = 0.0\n",
-    "total_wavelet_l1 = 0.0\n",
-    "total_wavelet_psnr = 0.0\n",
-    "total_wavelet_lpips = 0.0\n",
     "\n",
     "total_ssim_bilinear = 0.0\n",
     "total_mse_bilinear = 0.0\n",
@@ -304,21 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/238 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 238/238 [14:30<00:00,  3.66s/it]\n"
+      "100%|██████████| 120/120 [07:42<00:00,  3.85s/it]\n"
      ]
     }
    ],
@@ -326,44 +290,45 @@
     "from utils.wavelet import WaveletProcessor\n",
     "from tqdm import tqdm\n",
     "\n",
-    "for i in tqdm(range(len(test_dataset))):\n",
-    "    raw_frames = test_dataset[i]\n",
-    "    lr = raw_frames['LR'].to(device).unsqueeze(0)\n",
-    "    gb = raw_frames['GB'].to(device).unsqueeze(0)\n",
-    "    temp = raw_frames['TEMPORAL'].to(device).unsqueeze(0)\n",
-    "    hr = raw_frames['HR'].to(device).unsqueeze(0)\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    for i in tqdm(range(240, 360)):\n",
+    "        frame = test_dataset.get_inference_frame(i)\n",
+    "        log_frames = test_dataset.get_log_frames(i)\n",
     "\n",
-    "    with torch.no_grad():\n",
-    "        wavelet, image = trainer.model.forward(lr, gb, temp, 2.0)\n",
+    "        lr = frame['LR'].to(device).unsqueeze(0)\n",
+    "        gb = frame['GB'].to(device).unsqueeze(0)\n",
+    "        temp = frame['TEMPORAL'].to(device).unsqueeze(0)\n",
+    "        hr = frame['HR'].to(device).unsqueeze(0)\n",
+    "        inference = frame['INFERENCE']\n",
     "\n",
-    "    # Bilinearly upsample the LR image\n",
-    "    ups = ImageUtils.upsample(lr, 2)\n",
-    "    # Wavelet transform the hr image\n",
-    "    hr_wavelet = WaveletProcessor.batch_wt(hr)\n",
+    "        wavelet, image = model.forward(lr, gb, temp, 2.0)\n",
     "\n",
-    "    # Compute the metrics\n",
-    "    total_mse += ImageEvaluator.mse(image, hr).item()\n",
-    "    total_ssim += ImageEvaluator.ssim(image, hr).item()\n",
-    "    total_l1 += ImageEvaluator.l1(image, hr).item()\n",
-    "    total_psnr += ImageEvaluator.psnr(image, hr, 1.0).item()\n",
-    "    total_lpips += ImageEvaluator.lpips(image, hr).item()\n",
+    "        # Postprocess\n",
+    "        final, frames = test_dataset.preprocessor.postprocess(image, inference)\n",
+    "        gt = log_frames['HR'].to(device).unsqueeze(0)\n",
+    "        lr_frame = log_frames['LR'].to(device).unsqueeze(0)\n",
     "\n",
-    "    total_wavelet_mse += ImageEvaluator.mse(wavelet, hr_wavelet).item()\n",
-    "    total_wavelet_ssim += ((ImageEvaluator.ssim(wavelet[:, 0:3, :, :], hr_wavelet[:, 0:3, :, :]) + ImageEvaluator.ssim(wavelet[:, 3:6, :, :], hr_wavelet[:, 3:6, :, :]) + ImageEvaluator.ssim(wavelet[:, 6:9, :, :], hr_wavelet[:, 6:9, :, :]) + ImageEvaluator.ssim(wavelet[:, 9:12, :, :], hr_wavelet[:, 9:12, :, :])) / 4).item()\n",
-    "    total_wavelet_l1 += ImageEvaluator.l1(wavelet, hr_wavelet).item()\n",
-    "    total_wavelet_psnr += ImageEvaluator.psnr(wavelet, hr_wavelet, 2.0).item()\n",
-    "    total_wavelet_lpips += ((ImageEvaluator.lpips(wavelet[:, 0:3, :, :], hr_wavelet[:, 0:3, :, :]) + ImageEvaluator.lpips(wavelet[:, 3:6, :, :], hr_wavelet[:, 3:6, :, :]) + ImageEvaluator.lpips(wavelet[:, 6:9, :, :], hr_wavelet[:, 6:9, :, :]) + ImageEvaluator.lpips(wavelet[:, 9:12, :, :], hr_wavelet[:, 9:12, :, :])) / 4).item()\n",
+    "        # Bilinearly upsample the LR image\n",
+    "        ups = ImageUtils.upsample(lr_frame, 2)\n",
     "\n",
-    "    total_mse_bilinear += ImageEvaluator.mse(ups, hr).item()\n",
-    "    total_ssim_bilinear += ImageEvaluator.ssim(ups, hr).item()\n",
-    "    total_l1_bilinear += ImageEvaluator.l1(ups, hr).item()\n",
-    "    total_psnr_bilinear += ImageEvaluator.psnr(ups, hr, 1.0).item()\n",
-    "    total_lpips_bilinear += ImageEvaluator.lpips(ups, hr).item()"
+    "        # Compute the metrics\n",
+    "        total_mse += ImageEvaluator.mse(final, gt).item()\n",
+    "        total_ssim += ImageEvaluator.ssim(final, gt).item()\n",
+    "        total_l1 += ImageEvaluator.l1(final, gt).item()\n",
+    "        total_psnr += ImageEvaluator.psnr(final, gt, 1.0).item()\n",
+    "        total_lpips += ImageEvaluator.lpips(final, gt).item()\n",
+    "\n",
+    "        total_ssim_bilinear += ImageEvaluator.ssim(ups, gt).item()\n",
+    "        total_mse_bilinear += ImageEvaluator.mse(ups, gt).item()\n",
+    "        total_l1_bilinear += ImageEvaluator.l1(ups, gt).item()\n",
+    "        total_psnr_bilinear += ImageEvaluator.psnr(ups, gt, 1.0).item()\n",
+    "        total_lpips_bilinear += ImageEvaluator.lpips(ups, gt).item()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -371,48 +336,37 @@
      "output_type": "stream",
      "text": [
       "Metrics for the model\n",
-      "SSIM: 0.9375269112466764\n",
-      "MSE: 0.0005352461289055841\n",
-      "L1: 0.013167775729123284\n",
-      "PSNR: 33.24649676956049\n",
-      "LPIPS: 0.19275168110342586\n",
-      "Metrics for the wavelet model\n",
-      "SSIM: 0.9348329733900663\n",
-      "MSE: 0.0006377929279276467\n",
-      "L1: 0.00947199624517009\n",
-      "PSNR: 39.104559096969474\n",
-      "LPIPS: 0.13105929968487315\n",
+      "SSIM: 0.8619747459888458\n",
+      "MSE: 0.0015514181092536699\n",
+      "L1: 0.027032192486027878\n",
+      "PSNR: 28.267547941207887\n",
+      "LPIPS: 0.2706432558596134\n",
       "Metrics for the bilinear model\n",
-      "SSIM: 0.9360964976939834\n",
-      "MSE: 0.00046700571506296895\n",
-      "L1: 0.010743548293371036\n",
-      "PSNR: 34.860456667026554\n",
-      "LPIPS: 0.18343993548710807\n"
+      "SSIM: 0.9081082423528035\n",
+      "MSE: 0.0008547476674721111\n",
+      "L1: 0.011790875764563679\n",
+      "PSNR: 31.40296723047892\n",
+      "LPIPS: 0.21754737980663777\n"
      ]
     }
    ],
    "source": [
     "# Print all\n",
-    "print(\"Metrics for the model\")\n",
-    "print(f\"SSIM: {total_ssim / len(test_dataset)}\")\n",
-    "print(f\"MSE: {total_mse / len(test_dataset)}\")\n",
-    "print(f\"L1: {total_l1 / len(test_dataset)}\")\n",
-    "print(f\"PSNR: {total_psnr / len(test_dataset)}\")\n",
-    "print(f\"LPIPS: {total_lpips / len(test_dataset)}\")\n",
+    "length = 120\n",
     "\n",
-    "print(\"Metrics for the wavelet model\")\n",
-    "print(f\"SSIM: {total_wavelet_ssim / len(test_dataset)}\")\n",
-    "print(f\"MSE: {total_wavelet_mse / len(test_dataset)}\")\n",
-    "print(f\"L1: {total_wavelet_l1 / len(test_dataset)}\")\n",
-    "print(f\"PSNR: {total_wavelet_psnr / len(test_dataset)}\")\n",
-    "print(f\"LPIPS: {total_wavelet_lpips / len(test_dataset)}\")\n",
+    "print(\"Metrics for the model\")\n",
+    "print(f\"SSIM: {total_ssim / length}\")\n",
+    "print(f\"MSE: {total_mse / length}\")\n",
+    "print(f\"L1: {total_l1 / length}\")\n",
+    "print(f\"PSNR: {total_psnr / length}\")\n",
+    "print(f\"LPIPS: {total_lpips / length}\")\n",
     "\n",
     "print(\"Metrics for the bilinear model\")\n",
-    "print(f\"SSIM: {total_ssim_bilinear / len(test_dataset)}\")\n",
-    "print(f\"MSE: {total_mse_bilinear / len(test_dataset)}\")\n",
-    "print(f\"L1: {total_l1_bilinear / len(test_dataset)}\")\n",
-    "print(f\"PSNR: {total_psnr_bilinear / len(test_dataset)}\")\n",
-    "print(f\"LPIPS: {total_lpips_bilinear / len(test_dataset)}\")\n"
+    "print(f\"SSIM: {total_ssim_bilinear / length}\")\n",
+    "print(f\"MSE: {total_mse_bilinear / length}\")\n",
+    "print(f\"L1: {total_l1_bilinear / length}\")\n",
+    "print(f\"PSNR: {total_psnr_bilinear / length}\")\n",
+    "print(f\"LPIPS: {total_lpips_bilinear / length}\")"
    ]
   }
  ],
